# kairos

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: BETTING_PHILOSOPHY.md  EDGE_FINDER_SUMMARY.md  HERMES_WIRING.md  PRIVATE_KEY_EXPORT.md  SOUL.example.md  TRANSFER_TO_PC.md  hermes_config.example.yaml
hermes_plugin/: README.md  __init__.py  plugin.yaml  schemas.py  tools.py
logs/: 2026-06-03_193316_081229_smoke-test-mexico-beats-poland-group-sta.md  2026-06-03_193317_309462_smoke-test-mexico-beats-poland-group-sta.md  2026-06-03_193318_126503_smoke-test-mexico-beats-poland-group-sta.md  2026-06-03_193318_487726_smoke-test-mexico-beats-poland-group-sta.md  2026-06-03_193318_627821_smoke-test-mexico-beats-poland-group-sta.md  2026-06-03_193318_980204_smoke-test-mexico-beats-poland-group-sta.md  2026-06-03_193319_327940_smoke-test-mexico-beats-poland-group-sta.md  2026-06-04_235921_116247_smoke-test-mexico-beats-poland-group-sta.md  2026-06-04_235921_954388_smoke-test-mexico-beats-poland-group-sta.md  2026-06-04_235922_465846_smoke-test-mexico-beats-poland-group-sta.md  2026-06-04_235922_727135_smoke-test-mexico-beats-poland-group-sta.md  2026-06-04_235922_875798_smoke-test-mexico-beats-poland-group-sta.md  2026-06-04_235923_151039_smoke-test-mexico-beats-poland-group-sta.md  2026-06-04_235923_453728_smoke-test-mexico-beats-poland-group-sta.md  _events.md  _kills.md
scripts/: kalshi_live_check.py  kalshi_shadow_check.py
src/: config.py  fair_value.py  gamma_client.py  kalshi_client.py  kalshi_tool.py  logging_setup.py  main.py  market_velocity.py  (+6 more)
(+43 files in other folders)
